--- a/Artifact2.html
+++ b/Artifact2.html
@@ -9,11 +9,11 @@
     height: 90px;
     width: 100%;
   }
-  .bodyDiv{
+   .bodyDiv{
     display: flex;
     background-color: #e8e8e8;
-    align-items: start
-    text-align: left;
+    align-items: top;
+    justify-content: left;
     padding: 20px;
     height: 100%;
     width: 100%;
@@ -21,15 +21,20 @@
   .linksDiv{
     display: flex;
     background-color: #e8e8e8;
-    
+    position: absolute;
+    top: 130px;
+    z-index: 2;
     text-align: left;
     padding: 20px;
-    height: 100;
+    height: 100px;
     width: 100%;
   }
   .narrativeDiv{
     text-align: left;
-    align-items: center;
+    align-items: normal;
+    position: absolute;
+    top: 250;
+    z-index: 1;
     display: flex;
     background-color: #e8e8e8;
     padding: 20px;
@@ -62,9 +67,8 @@
           algorithms along with opportunities to implement improvements to input security; The improvements that<br>
           I’ve included in the updated software package are buffer overflow security for main menu selection input<br>
           and course object search input. The final project of Data Structure and Algorithms- Analysis and Design<br>
-          allows for two opportunities to improve user input security for Category Two: Algorithms and Data Structure.
-      </p>
-      <p>
+          allows for two opportunities to improve user input security for Category Two: Algorithms and Data Structure.<br><br>
+      
           &emsp;This series of updates met the anticipated course outcomes and presented a great learning<br>
           opportunity. In this artifact’s updates, course outcomes #2, #4, and #5 are satisfied since the<br>
           program’s comments have been updated to allow for a clear understanding of the programs operations,<br>
