--- a/Artifact2.html
+++ b/Artifact2.html
@@ -48,7 +48,7 @@
     <H2>Algorithms & Data Structures Artifact (Artifact 2)&nbsp;&nbsp;</H2>
   </div>
   <div class= "bodyDiv">
-    <div class="linksDiv>
+    <div class="linksDiv">
       <H2>Artifact 2 repository files&emsp;</H2>
       <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> updated version</a>
          &ensp;|&ensp; 
@@ -56,7 +56,7 @@
       <br><br>
     </div>
 
-    <div class= "narrativeDiv>
+    <div class= "narrativeDiv">
       <p>
           &emsp;In Category Two: Algorithms and Data Structure, I have chosen to update the user input<br>
           security features for the Data Structure and Algorithms- Analysis and Design final project. This<br>
@@ -81,7 +81,6 @@
           Tree’s print/search course function. This assignment presented an excellent learning experience, and the<br>
           anticipated course outcomes were fulfilled by the updates to this artifact.
       </p>
-
     </div>
     
   </div>
