--- a/Artifact1.html
+++ b/Artifact1.html
@@ -9,6 +9,15 @@
     height: 90px;
     width: 100%;
   }
+  .dividerDiv{
+    background-color: #fdff00;
+    height: 45px;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
   .bodyDiv{
     display: flex;
     background-color: #e8e8e8;
@@ -22,7 +31,7 @@
     display: flex;
     background-color: #e8e8e8;
     position: absolute;
-    top: 130px;
+    top: 190px;
     z-index: 2;
     text-align: left;
     padding: 20px;
@@ -33,7 +42,7 @@
     text-align: left;
     align-items: normal;
     position: absolute;
-    top: 250;
+    top: 310;
     z-index: 1;
     display: flex;
     background-color: #e8e8e8;
@@ -48,6 +57,15 @@
   <div class= "headerDiv">
     <H2>Software Design & Engineering Artifact (Artifact 1)&nbsp;&nbsp;</H2>
   </div>
+  <div class="dividerDiv">
+    <H2><a href= "index.html"> ePortfolio Homepage </a> 
+    &emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;
+    <a href= "Artifact2.html"> Artifact2 page link </a>
+    &emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;
+    <a href= "Artifact3.html"> Artifact3 page link </a>
+    </H2>
+  </div>
+  
   <div class= "bodyDiv">
 
     <div class="linksDiv">
