--- a/Artifact2.html
+++ b/Artifact2.html
@@ -9,7 +9,16 @@
     height: 90px;
     width: 100%;
   }
-   .bodyDiv{
+   .dividerDiv{
+    background-color: #fdff00;
+    height: 45px;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  .bodyDiv{
     display: flex;
     background-color: #e8e8e8;
     align-items: top;
@@ -22,7 +31,7 @@
     display: flex;
     background-color: #e8e8e8;
     position: absolute;
-    top: 130px;
+    top: 190px;
     z-index: 2;
     text-align: left;
     padding: 20px;
@@ -33,7 +42,7 @@
     text-align: left;
     align-items: normal;
     position: absolute;
-    top: 250;
+    top: 310;
     z-index: 1;
     display: flex;
     background-color: #e8e8e8;
@@ -47,6 +56,15 @@
   <div class= "headerDiv">
     <H2>Algorithms & Data Structures Artifact (Artifact 2)&nbsp;&nbsp;</H2>
   </div>
+  <div class="dividerDiv">
+    <a href= "index.html"> ePortfolio Homepage </a>
+    &emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;
+    <H2><a href= "Artifact1.html"> Artifact1 page link </a> 
+    &emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;
+    <a href= "Artifact3.html"> Artifact3 page link </a>
+    </H2>
+  </div>
+    
   <div class= "bodyDiv">
     <div class="linksDiv">
       <H2>Artifact 2 repository files&emsp;
