--- a/Artifact2.html
+++ b/Artifact2.html
@@ -57,9 +57,9 @@
     <H2>Algorithms & Data Structures Artifact (Artifact 2)&nbsp;&nbsp;</H2>
   </div>
   <div class="dividerDiv">
-    <a href= "index.html"> ePortfolio Homepage </a>
+    <H2><a href= "index.html"> ePortfolio Homepage </a>
     &emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;
-    <H2><a href= "Artifact1.html"> Artifact1 page link </a> 
+    <a href= "Artifact1.html"> Artifact1 page link </a> 
     &emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;
     <a href= "Artifact3.html"> Artifact3 page link </a>
     </H2>
