--- a/Artifact1.html
+++ b/Artifact1.html
@@ -10,7 +10,7 @@
     width: 100%;
   }
   .dividerDiv{
-    background-color: #fdff00;
+    background-color: #B66EBF;
     height: 45px;
     padding: 5px;
     display: flex;
