--- a/Artifact2.html
+++ b/Artifact2.html
@@ -10,7 +10,7 @@
     width: 100%;
   }
    .dividerDiv{
-    background-color: #7f00ff;
+    background-color: #B66EBF;
     height: 45px;
     padding: 5px;
     display: flex;
