--- a/Artifact1.html
+++ b/Artifact1.html
@@ -47,10 +47,10 @@
     display: flex;
     background-color: #e8e8e8;
     padding: 20px;
-    height: 100%;
+    height: 1200px;
     width: 100%;
 
-    font-size: 16px;
+    font-size: 18px;
     line-height: 1.750;
   }
 
