--- a/Artifact1.html
+++ b/Artifact1.html
@@ -47,8 +47,8 @@
     display: flex;
     background-color: #e8e8e8;
     padding: 20px;
-    height: 800px;
-    width: 500;
+    height: 100%;
+    width: 100%;
 
     font-size: 18px;
     line-height: 1.750;
