--- a/Artifact1.html
+++ b/Artifact1.html
@@ -23,7 +23,7 @@
     background-color: #e8e8e8;
     align-items: top;
     justify-content: left;
-    padding: 5px;
+    padding: 10px;
     height: 100%;
     width: 100%;
   }
@@ -34,7 +34,7 @@
     top: 190px;
     z-index: 2;
     text-align: left;
-    padding: 15px;
+    padding: 10px;
     height: 100px;
     width: 100%;
   }
@@ -46,9 +46,9 @@
     z-index: 1;
     display: flex;
     background-color: #e8e8e8;
-    padding: 15px;
+    padding: 10px;
     height: 100%;
-    width: 100%;
+    width: 600px;
 
     font-size: 18px;
     line-height: 1.750;
