--- a/Artifact1.html
+++ b/Artifact1.html
@@ -12,7 +12,7 @@
   .dividerDiv{
     background-color: #E5A3EE;
     height: 45px;
-    padding: 20px;
+    padding: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,7 +23,7 @@
     background-color: #e8e8e8;
     align-items: top;
     justify-content: left;
-    padding: 10px;
+    padding: 20px;
     height: 100%;
     width: 100%;
   }
@@ -34,7 +34,7 @@
     top: 190px;
     z-index: 2;
     text-align: left;
-    padding: 10px;
+    padding: 20px;
     height: 100px;
     width: 100%;
   }
@@ -46,10 +46,10 @@
     z-index: 1;
     display: flex;
     background-color: #e8e8e8;
-    padding: 10px;
+    padding: 20px;
     height: 100%;
-    width: 600px;
-
+    width: 100%;
+  
     font-size: 18px;
     line-height: 1.750;
   }
