--- a/Artifact2.html
+++ b/Artifact2.html
@@ -1,11 +1,12 @@
 <html>
 <style>
+ <style>
   .headerDiv{
     display: flex;
     background-color: #ee0e0e;
     align-items: center;
     justify-content: center;
-    padding: 10px;
+    padding: 20px;
     height: 90px;
     width: 100%;
   }
@@ -31,7 +32,7 @@
     display: flex;
     background-color: #e8e8e8;
     position: absolute;
-    top: 190px;
+    top: 200px;
     z-index: 2;
     text-align: left;
     padding: 20px;
@@ -49,6 +50,9 @@
     padding: 20px;
     height: 100%;
     width: 100%;
+  
+    font-size: 18px;
+    line-height: 1.750;
   }
 </style>
 
