--- a/Artifact3.html
+++ b/Artifact3.html
@@ -47,7 +47,7 @@
     display: flex;
     background-color: #e8e8e8;
     padding: 20px;
-    height: 100%;
+    height: 1000px;
     width: 100%;
   
     font-size: 18px;
