--- a/Artifact3.html
+++ b/Artifact3.html
@@ -48,7 +48,7 @@
     background-color: #e8e8e8;
     padding: 20px;
     height: 1000px;
-    width: 100%;
+    width: 1000px;
   
     font-size: 18px;
     line-height: 1.750;
