--- a/Artifact3.html
+++ b/Artifact3.html
@@ -36,7 +36,7 @@
     text-align: left;
     padding: 20px;
     height: 100px;
-    width: 100%;
+    width: 1000px;
   }
   .narrativeDiv{
     text-align: left;
