--- a/Artifact1.html
+++ b/Artifact1.html
@@ -1,6 +1,6 @@
 <html>
 <style>
-  .headerDiv{
+ .headerDiv{
     display: flex;
     background-color: #ee0e0e;
     align-items: center;
@@ -11,8 +11,8 @@
   }
   .dividerDiv{
     background-color: #E5A3EE;
-    height: 45px;
-    padding: 5px;
+    height: 25px;
+    padding: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,7 +36,7 @@
     text-align: left;
     padding: 20px;
     height: 100px;
-    width: 100%;
+    width: 1000px;
   }
   .narrativeDiv{
     text-align: left;
@@ -47,13 +47,12 @@
     display: flex;
     background-color: #e8e8e8;
     padding: 20px;
-    height: 100%;
-    width: 100%;
+    height: 1000px;
+    width: 1000px;
   
     font-size: 18px;
     line-height: 1.750;
   }
-
 </style>
 
 <body>
