--- a/Artifact2.html
+++ b/Artifact2.html
@@ -11,8 +11,8 @@
   }
   .dividerDiv{
     background-color: #E5A3EE;
-    height: 45px;
-    padding: 5px;
+    height: 25px;
+    padding: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,24 +31,24 @@
     display: flex;
     background-color: #e8e8e8;
     position: absolute;
-    top: 200px;
+    top: 250px;
     z-index: 2;
     text-align: left;
     padding: 20px;
     height: 100px;
-    width: 100%;
+    width: 1000px;
   }
   .narrativeDiv{
     text-align: left;
     align-items: normal;
     position: absolute;
-    top: 310;
+    top: 375;
     z-index: 1;
     display: flex;
     background-color: #e8e8e8;
     padding: 20px;
-    height: 100%;
-    width: 100%;
+    height: 1000px;
+    width: 1000px;
   
     font-size: 18px;
     line-height: 1.750;
