--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
   </div>
 </div>
 <div class="dividerDiv">
-  <H2><a href= "Artifact1.html"> Artifact1 </a> 
-    &emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;
-  <a href= "Artifact2.html"> Artifact2 </a>
-    &emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;
-  <a href= "Artifact3.html"> Artifact3 </a>
+  <H2><a href= "Artifact1.html"> Artifact 1 </a> 
+    &emsp;&emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;&emsp;
+  <a href= "Artifact2.html"> Artifact 2 </a>
+    &emsp;&emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;&emsp;
+  <a href= "Artifact3.html"> Artifact 3 </a>
   </H2>
 </div>
 <div class= "bodyDiv">
