--- a/Artifact1.html
+++ b/Artifact1.html
@@ -60,11 +60,11 @@
     <H2>Software Design & Engineering Artifact (Artifact 1)&nbsp;&nbsp;</H2>
   </div>
   <div class="dividerDiv">
-    <H2><a href= "index.html"> ePortfolio Homepage </a> 
-    &emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;
-    <a href= "Artifact2.html"> Artifact2 page link </a>
-    &emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;
-    <a href= "Artifact3.html"> Artifact3 page link </a>
+    <H2><a href= "index.html"> ePortfolio Home </a> 
+    &emsp;&emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;&emsp;
+    <a href= "Artifact2.html"> Artifact 2 </a>
+    &emsp;&emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;&emsp;
+    <a href= "Artifact3.html"> Artifact 3 </a>
     </H2>
   </div>
   
