--- a/Artifact2.html
+++ b/Artifact2.html
@@ -60,11 +60,11 @@
     <H2>Algorithms & Data Structures Artifact (Artifact 2)&nbsp;&nbsp;</H2>
   </div>
   <div class="dividerDiv">
-    <H2><a href= "index.html"> ePortfolio Homepage </a>
-    &emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;
-    <a href= "Artifact1.html"> Artifact1 page link </a> 
-    &emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;
-    <a href= "Artifact3.html"> Artifact3 page link </a>
+    <H2><a href= "index.html"> ePortfolio Home </a>
+    &emsp;&emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;&emsp;
+    <a href= "Artifact1.html"> Artifact 1 </a> 
+    &emsp;&emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;&emsp;
+    <a href= "Artifact3.html"> Artifact 3 </a>
     </H2>
   </div>
     
