--- a/Artifact3.html
+++ b/Artifact3.html
@@ -60,11 +60,11 @@
     <H2>Databases (Artifact 3)</H2>
   </div>
   <div class="dividerDiv">
-    <H2><a href= "index.html"> ePortfolio Homepage </a>
-    &emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;
-    <a href= "Artifact1.html"> Artifact1 page link </a>
-    &emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;
-    <a href= "Artifact2.html"> Artifact2 page link </a>
+    <H2><a href= "index.html"> ePortfolio Home </a>
+    &emsp;&emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;&emsp;
+    <a href= "Artifact1.html"> Artifact 1 </a>
+    &emsp;&emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;&emsp;
+    <a href= "Artifact2.html"> Artifact 2 </a>
     </H2>
   </div>
   
