--- a/index.html
+++ b/index.html
@@ -59,52 +59,15 @@
   <a href= "Artifact3.html"> Artifact 3 </a>
   </H2>
 </div>
+  
 <div class= "bodyDiv">
-  <div class= "bodyTxtDiv">
-
-  </div>
+  <iframe width="560" height="315" 
+    src="https://www.youtube.com/embed/OKOkinBrGPo?si=JIixcIIH_OVV-Bsk" title="YouTube video player" 
+    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
+    picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+    </iframe>
 </div>
+  
 </body>
 </html>
 
-<!--Test button to open popup window populated by artifact orig/updated code ..? -->
-<button onclick="openPopup()"> Test open popup </button>
-<button id="FetchArtifact1">Artifact1 </button>
-<pre id="outputArtifact1"></pre>
-
-
-<script>
-    document.getElementById('fetchFile').addEventListener('click', async function() {
-      const url = 'https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c'; // Replace with your file URL
-      try {
-        const response = await fetch(url);
-        const text = await response.text();
-        const lines = text.split('\n');
-        document.getElementById('outputArtifact1').textContent = lines.join('\n');
-      } catch (error) {
-        console.error('Error fetching file:', error);
-      }
-    });
-  </script>
-
-<script>
-
-  function openPopup(){
-    using System.Net.Http;
-    using System.Web;
-    using HttpClient client0 = new HttpClient();
-    string artifact1Code = await client0.GetAsync("https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c").Result;
-    <!-- string artifact1HtmlStr = HttpUtility.HtmlEncode(artifact1Code); -->
-      
-    let newWindow = window.open("", "Popup", "width=100%,height=100%");
-    newWindow.document.write(artifact1Code);    
-    
-    if(artifact1Code.IsSuccessStatusCode){
-        var artifact1CodeStr = await artifact1Code.Content.ReadAsStringAsync();
-    }
-
-    let newWindow = window.open("", "Test Popup", "width=100%,height=100%");
-    newWindow.document.write(artifact1CodeStr);  
-
-  }
-</script>
