--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
     height: 1200px;
     width: 1600px;
   }
+  .videoDiv{
+    display:flex;
+    background-color: #b9f2ff;
+    align-items: center;
+    padding: 20px;
+    height: 1000px;
+    width: 100%;
+  }
 </style>
 </head>
 
@@ -61,7 +69,7 @@
 </div>
   
 <div class= "bodyDiv">
-  <iframe width="560" height="315" 
+  <iframe width="800" height="500" 
     src="https://www.youtube.com/embed/OKOkinBrGPo?si=JIixcIIH_OVV-Bsk" title="YouTube video player" 
     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
     picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
