--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     display:flex;
     background-color: #b9f2ff;
     align-items: center;
+    justify-content: center;
     padding: 20px;
     height: 1000px;
     width: 100%;
