--- a/index.html
+++ b/index.html
@@ -50,6 +50,23 @@
     padding: 20px;
     height: 1000px;
     width: 100%;
+
+    position: absolute;
+    top: 375;
+    z-index: 1;
+  }
+  .vidTitleDiv{
+    display:flex;
+    background-color: #b9f2ff;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    height: 30px;
+    width: 100%;
+
+    position: absolute;
+    top: 300;
+    z-index: 2;
   }
 </style>
 </head>
@@ -70,8 +87,10 @@
 </div>
   
 <div class= "bodyDiv">
+  <div class="vidTileDiv">
+    <H3>Code Review of Artifacts</H3>
+  </div>
   <div class="videoDiv">
-  <H3>Code Review<br></H3>
   <iframe width="1200" height="750" 
     src="https://www.youtube.com/embed/OKOkinBrGPo?si=JIixcIIH_OVV-Bsk" title="YouTube video player" 
     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
