--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
     display:flex;
     background-color: #b9f2ff;
     align-items: center;
+    text-align: center;
     justify-content: center;
     padding: 20px;
     height: 30px;
     width: 100%;
 
     position: absolute;
-    top: 300;
+    top: 325;
     z-index: 2;
   }
 </style>
