--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </div>
   
 <div class= "bodyDiv">
-  <div class="vidTileDiv">
+  <div class="vidTitleDiv">
     <H3>Code Review of Artifacts</H3>
   </div>
   <div class="videoDiv">
