--- a/Artifact2.html
+++ b/Artifact2.html
@@ -2,7 +2,7 @@
 <style>
   .headerDiv{
     display: flex;
-    background-color: #ee0e0e;
+    background-color: #fdff00;
     align-items: center;
     justify-content: center;
     padding: 20px;
@@ -10,7 +10,7 @@
     width: 100%;
   }
   .dividerDiv{
-    background-color: #E5A3EE;
+    background-color: #4682b4;
     height: 25px;
     padding: 20px;
     display: flex;
@@ -20,7 +20,7 @@
   }
   .bodyDiv{
     display: flex;
-    background-color: #e8e8e8;
+    background-color: #b9f2ff;
     align-items: top;
     justify-content: left;
     padding: 20px;
@@ -29,7 +29,7 @@
   }
   .linksDiv{
     display: flex;
-    background-color: #e8e8e8;
+    background-color: #b9f2ff;
     position: absolute;
     top: 250px;
     z-index: 2;
@@ -45,7 +45,7 @@
     top: 375;
     z-index: 1;
     display: flex;
-    background-color: #e8e8e8;
+    background-color: #b9f2ff;
     padding: 20px;
     height: 1000px;
     width: 1000px;
