--- a/Artifact3.html
+++ b/Artifact3.html
@@ -20,7 +20,7 @@
   }
   .bodyDiv{
     display: flex;
-    background-color: #D9FDFF;
+    background-color: #CDFCFE;
     align-items: top;
     justify-content: left;
     padding: 20px;
@@ -29,7 +29,7 @@
   }
   .linksDiv{
     display: flex;
-    background-color: #D9FDFF;
+    background-color: #CDFCFE;
     position: absolute;
     top: 250px;
     z-index: 2;
@@ -45,7 +45,7 @@
     top: 375;
     z-index: 1;
     display: flex;
-    background-color: #D9FDFF;
+    background-color: #CDFCFE;
     padding: 20px;
     height: 1000px;
     width: 1000px;
