--- a/Artifact1.html
+++ b/Artifact1.html
@@ -32,7 +32,7 @@
     background-color: #CDFCFE;
     position: absolute;
     top: 250px;
-    z-index: 2;
+    z-index: 3;
     text-align: left;
     padding: 20px;
     height: 100px;
@@ -43,7 +43,7 @@
     align-items: normal;
     position: absolute;
     top: 375;
-    z-index: 1;
+    z-index: 2;
     display: flex;
     background-color: #CDFCFE;
     padding: 20px;
@@ -53,6 +53,22 @@
     font-size: 18px;
     line-height: 1.750;
   }
+ .codeDiv{
+    text-align: left;
+    align-items: normal;
+    position: absolute;
+    top: 900;
+    z-index: 3;
+    display: flex;
+    background-color: #CDFCFE;
+    padding: 20px;
+    height: 1000px;
+    width: 100%;
+  
+    font-size: 18px;
+    line-height: 1.750;
+
+ }
 </style>
 
 <body>
@@ -120,7 +136,7 @@
         </p>
     </div>
 
-   <div>
+   <div class="codeDiv">
     <div>
       <p><H3><br><br>Original code<br><br></H3>
       /*<br>
