--- a/Artifact1.html
+++ b/Artifact1.html
@@ -24,7 +24,7 @@
     align-items: top;
     justify-content: left;
     padding: 20px;
-    height: 11000px;
+    height: 9000px;
     width: 100%;
   }
   .linksDiv{
@@ -62,7 +62,7 @@
     display: flex;
     background-color: #CDFCFE;
     padding: 40px;
-    height: 11000px;
+    height: 9000px;
     width: 100%;
   
     font-size: 18px;
@@ -302,7 +302,7 @@
             return;<br>
         }<br>
     </p></div>
-
+    <div>&emsp;&emsp;&emsp;&emsp;&emsp;</div>
     <div>
          <p><H3><br><br>Updated code<br><br></H3>
           //global temperature variables<br>
