--- a/Artifact1.html
+++ b/Artifact1.html
@@ -24,7 +24,7 @@
     align-items: top;
     justify-content: left;
     padding: 20px;
-    height: 6000px;
+    height: 8000px;
     width: 100%;
   }
   .linksDiv{
@@ -302,7 +302,7 @@
             return;<br>
         }<br>
     </p></div>
-    <div>&emsp;&emsp;&emsp;&emsp;&emsp;</div>
+    <div>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</div>
     <div>
          <p><H3><br><br>Updated code<br><br></H3>
           //global temperature variables<br>
