--- a/Artifact1.html
+++ b/Artifact1.html
@@ -302,7 +302,7 @@
             return;<br>
         }<br>
     </p></div>
-    <div>&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;</div>
+    <div>&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp; &emsp;&emsp;</div>
     <div>
          <p><H3><br><br>Updated code<br><br></H3>
           //global temperature variables<br>
