--- a/Artifact1.html
+++ b/Artifact1.html
@@ -137,6 +137,7 @@
     </div>
 
    <div class="codeDiv">
+    <div>&ensp;</div>
     <div>
       <p><H3><br><br>Original code<br><br></H3>
       
