--- a/Artifact1.html
+++ b/Artifact1.html
@@ -208,7 +208,7 @@
             uint16_t totalTime = 0;<br>
             unsigned short heatStatus = 0;<br>
         <br>
-            //Testin1<br>
+            //Output Test<br>
             DISPLAY( snprintf(output, 64, "<%02d,%02d,%d,%04d>\n\r", roomTemp, setPoint, heatStatus, totalTime));<br>
         <br>
             while(1){<br>
