--- a/Artifact1.html
+++ b/Artifact1.html
@@ -57,6 +57,9 @@
     text-align: left;
     align-items: normal;
     position: absolute;
+
+    justify-content: space-between;
+  
     top: 1600;
     z-index: 3;
     display: flex;
