--- a/Artifact3.html
+++ b/Artifact3.html
@@ -57,6 +57,8 @@
     text-align: left;
     align-items: normal;
     position: absolute;
+    justify-content: space-evenly;
+   
     top: 1400;
     z-index: 3;
     display: flex;
