--- a/Artifact1.html
+++ b/Artifact1.html
@@ -484,6 +484,183 @@
                          
     <div>
          <p><H3><br><br>Updated code<br><br></H3>
+
+          // UART Global Variables<br>
+          char output[150];<br>
+          int bytesToSend;<br>
+          <br>
+          // Driver Handles - Global variables<br>
+          UART2_Handle uart;<br>
+          <br>
+          #define DISPLAY(x) UART2_write(uart, &output, sizeof(output), 0);<br>
+          <br>
+          void initUART(void)<br>
+          {<br>
+              UART2_Params uartParams;<br>
+          <br>
+              // Configure the driver<br>
+              UART2_Params_init(&uartParams);<br>
+              uartParams.writeMode = UART2_Mode_CALLBACK;<br>
+              uartParams.readMode = UART2_Mode_CALLBACK;<br>
+          <br>
+              uartParams.baudRate = 115200;<br>
+          <br>
+              // Open the driver<br>
+              uart = UART2_open(CONFIG_UART2_0, &uartParams);<br>
+          <br>
+              if (uart == NULL) {<br>
+                  /* UART_open() failed */<br>
+                  while (1);<br>
+              }<br>
+          }<br>
+          <br>
+          // Driver Handles - Global variables<br>
+          Timer_Handle timer0;<br>
+          int periodCondition = 0;<br>
+          <br>
+          volatile unsigned char TimerFlag = 0;<br>
+          void timerCallback(Timer_Handle myHandle, int_fast16_t status)<br>
+          {<br>
+              if(periodCondition < 10)<br>
+                  periodCondition++;<br>
+          <br>
+              else<br>
+                  periodCondition = 0;<br>
+          }<br>
+          <br>
+          void initTimer(void)<br>
+          {<br>
+              Timer_Params params;<br>
+          <br>
+              // Init the driver<br>
+              Timer_init();<br>
+          <br>
+              // Configure the driver<br>
+              Timer_Params_init(&params);<br>
+              params.period = 100000;<br>
+              params.periodUnits = Timer_PERIOD_US;<br>
+              params.timerMode = Timer_CONTINUOUS_CALLBACK;<br>
+              params.timerCallback = timerCallback;<br>
+          <br>
+              // Open the driver<br>
+              timer0 = Timer_open(CONFIG_TIMER_0, &params);<br>
+              if (timer0 == NULL) {<br>
+                  /* Failed to initialized timer */<br>
+                  while (1) {}<br>
+              }<br>
+              if (Timer_start(timer0) == Timer_STATUS_ERROR) {<br>
+                  /* Failed to start timer */<br>
+                  while (1) {}<br>
+              }<br>
+          }<br>
+          <br>
+          // I2C Global Variables<br>
+          static const struct {<br>
+              uint8_t address;<br>
+              uint8_t resultReg;<br>
+              char *id;<br>
+          } sensors[3] = {<br>
+                          { 0x48, 0x0000, "11X" },<br>
+                          { 0x49, 0x0000, "116" },<br>
+                          { 0x41, 0x0001, "006" }<br>
+          };<br>
+          <br>
+          uint8_t txBuffer[1];<br>
+          uint8_t rxBuffer[2];<br>
+          I2C_Transaction i2cTransaction;<br>
+          <br>
+          // Driver Handles - Global variables<br>
+          I2C_Handle i2c;<br>
+          <br>
+          // Make sure you call initUART() before calling this function.<br>
+          void initI2C(void)<br>
+          {<br>
+              int8_t i, found;<br>
+              I2C_Params i2cParams;<br>
+              DISPLAY( snprintf(output, 150, "Initializing I2C Driver - "));<br>
+          <br>
+              // Init the driver<br>
+              I2C_init();<br>
+          <br>
+              // Configure the driver<br>
+              I2C_Params_init(&i2cParams);<br>
+              i2cParams.bitRate = I2C_400kHz;<br>
+          <br>
+              // Open the driver<br>
+              i2c = I2C_open(CONFIG_I2C_0, &i2cParams);<br>
+              if (i2c == NULL)<br>
+              {<br>
+                  DISPLAY( snprintf(output, 150, "Failed\n\r"));<br>
+                  while (1);<br>
+              }<br>
+          <br>
+              DISPLAY( snprintf(output, 64, "Passed\n\r"));<br>
+          <br>
+              // Boards were shipped with different sensors.<br>
+              // Welcome to the world of embedded systems.<br>
+              // Try to determine which sensor we have.<br>
+              // Scan through the possible sensor addresses<br>
+          <br>
+              /* Common I2C transaction setup */<br>
+              i2cTransaction.writeBuf = txBuffer;<br>
+              i2cTransaction.writeCount = 1;<br>
+              i2cTransaction.readBuf = rxBuffer;<br>
+              i2cTransaction.readCount = 0;<br>
+          <br>
+              found = false;<br>
+              for (i=0; i<3; ++i)<br>
+              {<br>
+                  i2cTransaction.targetAddress = sensors[i].address;<br>
+                  txBuffer[0] = sensors[i].resultReg;<br>
+                  DISPLAY( snprintf(output, 150, "Is this %s? ", sensors[i].id));<br>
+                  if (I2C_transfer(i2c, &i2cTransaction))<br>
+                  {<br>
+                      DISPLAY( snprintf(output, 150, "Found\n\r"));<br>
+                      found = true;<br>
+                      break;<br>
+                  }<br>
+                  DISPLAY( snprintf(output, 150, "Not Found at sensor index\n\r"));<br>
+              }<br>
+          <br>
+              if(found)<br>
+              {<br>
+                  DISPLAY( snprintf(output, 150, "Detected TMP%s I2C address: %x\n\r", sensors[i].id, i2cTransaction.targetAddress));<br>
+              }<br>
+              else<br>
+              {<br>
+                  DISPLAY( snprintf(output, 150, "Temperature sensor not found, contact professor\n\r"));<br>
+              }<br>
+          }<br>
+          <br>
+          int16_t readTemp(void)<br>
+          {<br>
+              int16_t temperature = 0;<br>
+              i2cTransaction.readCount = 2;<br>
+              if (I2C_transfer(i2c, &i2cTransaction))<br>
+              {<br>
+                  /*<br>
+                   * Extract degrees C from the received data;<br>
+                   * see TMP sensor datasheet<br>
+                   */<br>
+                  temperature = (rxBuffer[0] << 8) | (rxBuffer[1]);<br>
+                  temperature *= 0.0078125;<br>
+                  /*<br>
+                   * If the MSB is set '1', then we have a 2's complement<br>
+                   * negative value which needs to be sign extended<br>
+                   */<br>
+                  if (rxBuffer[0] & 0x80)<br>
+                  {<br>
+                      temperature |= 0xF000;<br>
+                  }<br>
+              }<br>
+              else<br>
+              {<br>
+                  DISPLAY( snprintf(output, 150, "Error reading temperature sensor (%d)\n\r", i2cTransaction.status));<br>
+                  DISPLAY( snprintf(output, 150, "Please power cycle your board by unplugging/plugging back in.\n\r"));<br>
+              }<br>
+              return temperature;<br>
+          }<br>
+          <br>
           //global temperature variables<br>
           <br>
           uint16_t setPoint = 0;              //TI CC3220S board's button interface controlled variable to set user defined temperature preference<br>
