--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     width: 100%;
 
     position: absolute;
-    top: 750;
-    z-index: 2;
+    top: 1500;
+    z-index: 3;
   }
   .vidTitleDiv{
     display:flex;
@@ -66,21 +66,21 @@
     width: 100%;
 
     position: absolute;
-    top: 1140;
-    z-index: 3;
+    top: 1450;
+    z-index: 2;
   }
   .selfAssessDiv{
     display:flex;
     background-color: #b9f2ff;
     align-items: center;
-    text-align: center;
+    text-align: left;
     justify-content: center;
     padding: 20px;
     height: 800px;
     width: 100%;
 
     position: absolute;
-    top: 320;
+    top: 300;
     z-index: 1;
 
   }
