--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     position: absolute;
     top: 1500;
-    z-index: 3;
+    z-index: 4;
   }
   .vidTitleDiv{
     display:flex;
@@ -67,7 +67,7 @@
 
     position: absolute;
     top: 1450;
-    z-index: 2;
+    z-index: 3;
   }
   .selfAssessDiv{
     display:flex;
@@ -77,6 +77,20 @@
     justify-content: center;
     padding: 20px;
     height: 800px;
+    width: 100%;
+
+    position: absolute;
+    top: 350;
+    z-index: 2;
+  }
+  .selfAssessTitleDiv{
+    display:flex;
+    background-color: #b9f2ff;
+    align-items: center;
+    text-align: left;
+    justify-content: center;
+    padding: 20px;
+    height: 100px;
     width: 100%;
 
     position: absolute;
@@ -103,8 +117,11 @@
 </div>
   
 <div class= "bodyDiv">
+  <div class="selfAssessTitleDiv">
+    <h3>Professional Self-Assessment</h3>
+  </div>
+  
   <div class="selfAssessDiv">
-     <h3>Professional Self-Assessment</h3>
       <p>
         
     	&emsp;&emsp;Through the development of this ePortfolio and the completion of the program’s coursework my software engineering skills have been emboldened, and my professional pursuits<br>
