--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
     position: absolute;
     top: 450;
     z-index: 2;
+
+    font-size: 18px;
+    line-height: 1.750;
   }
   .selfAssessTitleDiv{
     display:flex;
@@ -94,7 +97,7 @@
     width: 100%;
 
     position: absolute;
-    top: 325;
+    top: 345;
     z-index: 1;
 
   }
