--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     width: 100%;
 
     position: absolute;
-    top: 1600;
+    top: 1350;
     z-index: 4;
   }
   .vidTitleDiv{
@@ -66,7 +66,7 @@
     width: 100%;
 
     position: absolute;
-    top: 1550;
+    top: 1400;
     z-index: 3;
   }
   .selfAssessDiv{
@@ -74,7 +74,7 @@
     background-color: #b9f2ff;
     align-items: center;
     text-align: left;
-    justify-content: center;
+    justify-content: space-between;
     padding: 20px;
     height: 900px;
     width: 100%;
@@ -91,7 +91,7 @@
     background-color: #b9f2ff;
     align-items: center;
     text-align: left;
-    justify-content: center;
+    justify-content: space-between;
     padding: 20px;
     height: 75px;
     width: 100%;
@@ -167,7 +167,7 @@
     <H3>Code Review of Artifacts</H3>
   </div>
   <div class="videoDiv">
-  <iframe width="1200" height="750" 
+  <iframe width="1500" height="1100" 
     src="https://www.youtube.com/embed/OKOkinBrGPo?si=JIixcIIH_OVV-Bsk" title="YouTube video player" 
     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
     picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
