--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
-    height: 850px;
+    height: 1000px;
     width: 100%;
 
     position: absolute;
-    top: 1450;
+    top: 1800;
     z-index: 4;
   }
   .vidTitleDiv{
@@ -135,8 +135,9 @@
       &emsp;4.	Demonstrate an ability to use well-founded and innovative techniques, skills, and tools in computing practices for the purpose of implementing computer solutions that deliver value and accomplish industry-specific goals<br>
       &emsp;5.	Develop a security mindset that anticipates adversarial exploits in software architecture and designs to expose potential vulnerabilities, mitigate design flaws, and ensure privacy and enhanced security of data and resources.<br>
       These program guidelines have been met through peer collaboration in each course, continual dialogue with instructors, and an always evolving approach to engineering and implementing software packages. From learning<br> 
-       full-stack development of web applications (Christopher101010101010101010/CS-465: FullStackDevelopmentI) and automation of quality assurance techniques <br>
-      (SoftTst-Autom-QltyAssurance/ContactServiceTest.java at main · Christopher101010101010101010/SoftTst-Autom-QltyAssurance) to presenting security policy recommendations(Project Two: Security Policy Presentation),<br>
+       full-stack development of web applications (<a href= "https://github.com/Christopher101010101010101010/CS-465">Full Stack Development I</a>) and automation of quality assurance techniques <br>
+      (<a href="https://github.com/Christopher101010101010101010/SoftTst-Autom-QltyAssurance"> Software Testing, Automation, and Quality Assurance</a>) to presenting security policy recommendations(<a href="https://www.youtube.com/watch?v=AaKFK9RPKp8">
+      Security Policy Presentation</a>),<br>
       this software engineering academic program has vastly expanded upon my understanding of software architecture, algorithms, design, security measures, and databases. My career goals are more evident and the toolset that<br>
       I bring to this pursuit has become polished by the completion of this academic program’s coursework and the development of this ePortfolio.<br>
     	
