--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
   .videoDiv{
     display:flex;
     background-color: #b9f2ff;
-    align-items: center;
+    align-items: ;
     justify-content: center;
     padding: 20px;
     height: 1000px;
     width: 100%;
 
     position: absolute;
-    top: 1800;
+    top: 1600;
     z-index: 4;
   }
   .vidTitleDiv{
