--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     background-color: #b9f2ff;
     text-align: left;
     padding: 30px;
-    height: 2000px;
+    height: 2400px;
     width: 100%;
   }
   .dividerDiv{
@@ -38,7 +38,7 @@
   .bodyTxtDiv{
     background-color: #b9f2ff;
     text-align: left;
-    padding: 30px;
+    padding: 25px;
     height: 1200px;
     width: 1600px;
   }
@@ -47,7 +47,7 @@
     background-color: #b9f2ff;
     align-items: ;
     justify-content: center;
-    padding: 20px;
+    padding: 15px;
     height: 1000px;
     width: 100%;
 
@@ -61,7 +61,7 @@
     align-items: center;
     text-align: center;
     justify-content: center;
-    padding: 20px;
+    padding: 15px;
     height: 30px;
     width: 100%;
 
@@ -75,7 +75,7 @@
     align-items: center;
     text-align: left;
     justify-content: space-between;
-    padding: 20px;
+    padding: 15px;
     height: 900px;
     width: 100%;
 
@@ -92,7 +92,7 @@
     align-items: center;
     text-align: left;
     justify-content: space-between;
-    padding: 20px;
+    padding: 15px;
     height: 75px;
     width: 100%;
 
@@ -135,10 +135,10 @@
       &emsp;4.	Demonstrate an ability to use well-founded and innovative techniques, skills, and tools in computing practices for the purpose of implementing computer solutions that deliver value and accomplish industry-specific goals<br>
       &emsp;5.	Develop a security mindset that anticipates adversarial exploits in software architecture and designs to expose potential vulnerabilities, mitigate design flaws, and ensure privacy and enhanced security of data and resources.<br>
       These program guidelines have been met through peer collaboration in each course, continual dialogue with instructors, and an always evolving approach to engineering and implementing software packages. From learning<br> 
-       full-stack development of web applications (<a href= "https://github.com/Christopher101010101010101010/CS-465">Full Stack Development I</a>) and automation of quality assurance techniques <br>
-      (<a href="https://github.com/Christopher101010101010101010/SoftTst-Autom-QltyAssurance"> Software Testing, Automation, and Quality Assurance</a>) to presenting security policy recommendations(<a href="https://www.youtube.com/watch?v=AaKFK9RPKp8">
-      Security Policy Presentation</a>),<br>
-      this software engineering academic program has vastly expanded upon my understanding of software architecture, algorithms, design, security measures, and databases. My career goals are more evident and the toolset that<br>
+       full-stack development of web applications (<a href= "https://github.com/Christopher101010101010101010/CS-465">Full Stack Development I</a>) and automation of quality assurance techniques
+      (<a href="https://github.com/Christopher101010101010101010/SoftTst-Autom-QltyAssurance"> Software Testing, Automation, and Quality Assurance</a>) to presenting security policy 
+      recommendations(<a href="https://www.youtube.com/watch?v=AaKFK9RPKp8">Security Policy Presentation</a>), this software engineering academic program has vastly expanded upon my understanding<br>
+      of software architecture, algorithms, design, security measures, and databases. My career goals are more evident and the toolset that<br>
       I bring to this pursuit has become polished by the completion of this academic program’s coursework and the development of this ePortfolio.<br>
     	
       &emsp;&emsp;The journey through this software engineering academic program has improved upon my understanding of software by expanding upon security protocols, requirements acquisition, system’s design, database<br>
