--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   .bodyTxtDiv{
     background-color: #b9f2ff;
     text-align: left;
-    padding: 25px;
+    padding: 20px;
     height: 1200px;
     width: 1600px;
   }
@@ -47,7 +47,7 @@
     background-color: #b9f2ff;
     align-items: ;
     justify-content: center;
-    padding: 15px;
+    padding: 10px;
     height: 1000px;
     width: 100%;
 
@@ -61,7 +61,7 @@
     align-items: center;
     text-align: center;
     justify-content: center;
-    padding: 15px;
+    padding: 10px;
     height: 30px;
     width: 100%;
 
@@ -75,7 +75,7 @@
     align-items: center;
     text-align: left;
     justify-content: space-between;
-    padding: 15px;
+    padding: 10px;
     height: 900px;
     width: 100%;
 
@@ -92,7 +92,7 @@
     align-items: center;
     text-align: left;
     justify-content: space-between;
-    padding: 15px;
+    padding: 10px;
     height: 75px;
     width: 100%;
 
@@ -128,16 +128,16 @@
       <p>
         
     	&emsp;&emsp;Through the development of this ePortfolio and the completion of the program’s coursework my software engineering skills have been emboldened, and my professional pursuits<br>
-      have also become more refined. In this capstone course along with the software engineering program in general, the primary goals have been to<br>
+      have also become more refined. In this capstone course along with the software engineering program in general, the primary goals have been to<br><br>
       &emsp;1.	Employ strategies for building collaborative environments that enable diverse audiences to support organizational decision making in the field of computer science<br>
       &emsp;2.	Design, develop, and deliver professional-quality oral, written, and visual communications that are coherent, technically sound, and appropriately adapted to specific audiences and contexts<br>
       &emsp;3.	Design and evaluate computing solutions that solve a given problem using algorithmic principles and computer science practices and standards appropriate to its solution, while managing the trade-offs involved in design choices<br>
       &emsp;4.	Demonstrate an ability to use well-founded and innovative techniques, skills, and tools in computing practices for the purpose of implementing computer solutions that deliver value and accomplish industry-specific goals<br>
-      &emsp;5.	Develop a security mindset that anticipates adversarial exploits in software architecture and designs to expose potential vulnerabilities, mitigate design flaws, and ensure privacy and enhanced security of data and resources.<br>
+      &emsp;5.	Develop a security mindset that anticipates adversarial exploits in software architecture and designs to expose potential vulnerabilities, mitigate design flaws, and ensure privacy and enhanced security of data and resources.<br><br>
       These program guidelines have been met through peer collaboration in each course, continual dialogue with instructors, and an always evolving approach to engineering and implementing software packages. From learning<br> 
        full-stack development of web applications (<a href= "https://github.com/Christopher101010101010101010/CS-465">Full Stack Development I</a>) and automation of quality assurance techniques
-      (<a href="https://github.com/Christopher101010101010101010/SoftTst-Autom-QltyAssurance"> Software Testing, Automation, and Quality Assurance</a>) to presenting security policy 
-      recommendations(<a href="https://www.youtube.com/watch?v=AaKFK9RPKp8">Security Policy Presentation</a>), this software engineering academic program has vastly expanded upon my understanding<br>
+      (<a href="https://github.com/Christopher101010101010101010/SoftTst-Autom-QltyAssurance"> Software Testing, Automation, and Quality Assurance</a>) to presenting security policy recommendations<br>
+      (<a href="https://www.youtube.com/watch?v=AaKFK9RPKp8">Security Policy Presentation</a>), this software engineering academic program has vastly expanded upon my understanding
       of software architecture, algorithms, design, security measures, and databases. My career goals are more evident and the toolset that<br>
       I bring to this pursuit has become polished by the completion of this academic program’s coursework and the development of this ePortfolio.<br>
     	
