--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
       These program guidelines have been met through peer collaboration in each course, continual dialogue with instructors, and an always evolving approach to engineering and implementing software packages. From learning<br> 
        full-stack development of web applications (<a href= "https://github.com/Christopher101010101010101010/CS-465">Full Stack Development I</a>) and automation of quality assurance techniques
       (<a href="https://github.com/Christopher101010101010101010/SoftTst-Autom-QltyAssurance"> Software Testing, Automation, and Quality Assurance</a>) to presenting security policy recommendations<br>
-      (<a href="https://www.youtube.com/watch?v=AaKFK9RPKp8">Security Policy Presentation</a>), this software engineering academic program has vastly expanded upon my understanding
-      of software architecture, algorithms, design, security measures, and databases. My career goals are more evident and the toolset that<br>
-      I bring to this pursuit has become polished by the completion of this academic program’s coursework and the development of this ePortfolio.<br>
+      (<a href="https://www.youtube.com/watch?v=AaKFK9RPKp8">Security Policy Presentation</a>), this software engineering academic program has vastly expanded upon my understanding of software architecture, algorithms, design, security
+      measures, and databases. My career goals are more evident<br>
+      and the toolset that I bring to this pursuit has become polished by the completion of this academic program’s coursework and the development of this ePortfolio.<br>
     	
       &emsp;&emsp;The journey through this software engineering academic program has improved upon my understanding of software by expanding upon security protocols, requirements acquisition, system’s design, database<br>
       management, networking techniques, full-stack web development, automation/quality assurance, graphics development, and AI agent training techniques. In early courses, this program focused upon the appreciation<br>
