--- a/Artifact2.html
+++ b/Artifact2.html
@@ -93,6 +93,10 @@
          &ensp;|&ensp; 
       <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> original version</a></H2>
       <br><br>
+      <H2>support files</H2>
+      <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/Artifact2BinarySearchTree.hpp">Binary Search Tree file</a>
+      &ensp;|&ensp;
+      <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/Artifact2main.cpp">main file</a>
     </div>
 
     <div class= "narrativeDiv">
