--- a/Artifact2.html
+++ b/Artifact2.html
@@ -24,7 +24,7 @@
     align-items: top;
     justify-content: left;
     padding: 20px;
-    height: 8750px;
+    height: 8850px;
     width: 100%;
   }
   .linksDiv{
@@ -42,7 +42,7 @@
     text-align: left;
     align-items: normal;
     position: absolute;
-    top: 375;
+    top: 475;
     z-index: 1;
     display: flex;
     background-color: #CDFCFE;
@@ -59,7 +59,7 @@
     position: absolute;
     justify-content: space-evenly;
     
-    top: 1100;
+    top: 1200;
     z-index: 3;
     display: flex;
     background-color: #CDFCFE;
@@ -91,12 +91,13 @@
       <H2>Artifact 2 repository files&emsp;
       <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> updated version</a>
          &ensp;|&ensp; 
-      <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> original version</a></H2>
+      <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> original version</a>
       <br><br>
-      <H2>support files</H2>
+        
+      <H2>support files&emsp;
       <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/Artifact2BinarySearchTree.hpp">Binary Search Tree file</a>
       &ensp;|&ensp;
-      <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/Artifact2main.cpp">main file</a>
+      <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/Artifact2main.cpp">main file</a></H2>
     </div>
 
     <div class= "narrativeDiv">
